--- a/TensorFlow con Docker/files/Examples/Tensors.ipynb
+++ b/TensorFlow con Docker/files/Examples/Tensors.ipynb
@@ -6,8 +6,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-   ],
+   "outputs": [],
    "source": [
     "# TENSOR\n",
     "Es una estructura basica utilizada para representar los datos.\n",
@@ -254,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2 (SageMath)",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
@@ -268,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
