test original code and train model

--- a/TensorFlow con Docker/files/Examples/DataAugmentationTechniques/scaling.ipynb
+++ b/TensorFlow con Docker/files/Examples/DataAugmentationTechniques/scaling.ipynb
@@ -188,7 +188,7 @@
     "    return listaDeResultados\n",
     "\t\n",
     "# Produce each image at scaling of 90%, 75%, 60% and 50% of original image.\n",
-    "imagenesEscaladas = escalarImagenes(X_imgs, [0.90, 0.75, 0.60, 0.50])"
+    "imagenesEscaladas = escalarImagenes(X_imgs, 5, 10%)"
    ]
   },
   {
